<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RainCheck</string>
    <string name="action_settings">Settings</string>
    <string name="save">Save Settings</string>
    <string name="notify_field">Time I want to be notified: </string>
    <string name="outside_text">I will be outside: </string>
    <string name="start_field">From </string>
    <string name="end_field">Until </string>
    <string name="colon">:</string>
    <string name="deleteDesc">Delete file</string>
    <string name="notify_hour">TimePickerFragment.notify_hour</string>
    <string name="pm">PM</string>
    <string name="am">AM</string>

</resources>
