<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notify_field"
        android:id="@+id/notifyText"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_alignBaseline="@+id/notifyFieldHour"
        android:layout_alignBottom="@+id/notifyFieldHour" />

    <EditText
        android:layout_width="25dp"
        android:inputType="time"
        android:maxLength="2"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        android:id="@+id/notifyFieldHour"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/notifyText"
        android:layout_marginTop="12dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/colon"
        android:id="@+id/colon1"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_alignBaseline="@+id/notifyFieldHour"
        android:layout_alignBottom="@+id/notifyFieldHour"
        android:layout_toRightOf="@id/notifyFieldHour"/>

    <EditText
        android:layout_width="25dp"
        android:inputType="time"
        android:maxLength="2"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        android:id="@+id/notifyFieldMinutes"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/colon1"
        android:layout_marginTop="12dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/outside_text"
        android:id="@+id/outsideText"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_below="@+id/notifyFieldHour"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_field"
        android:id="@+id/startText"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_below="@+id/outsideText"
        android:layout_alignLeft="@+id/endText"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="11dp"
        android:textSize="35sp" />

    <EditText
        android:layout_width="50dp"
        android:inputType="time"
        android:layout_height="50dp"
        android:maxLength="2"
        android:background="@color/grey"
        android:id="@+id/startFieldHour"
        android:layout_alignBottom="@+id/startText"
        android:layout_toRightOf="@id/startText"
        android:layout_marginLeft="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/colon"
        android:id="@+id/colon2"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_alignBaseline="@+id/startFieldHour"
        android:layout_alignBottom="@+id/startFieldHour"
        android:layout_toRightOf="@id/startFieldHour"
        android:textSize="30sp" />

    <EditText
        android:layout_width="50dp"
        android:inputType="time"
        android:layout_height="50dp"
        android:maxLength="2"
        android:background="@color/grey"
        android:id="@+id/startFieldMinutes"
        android:layout_alignTop="@+id/startFieldHour"
        android:layout_toRightOf="@id/colon2"
        android:layout_alignParentEnd="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_field"
        android:id="@+id/endText"
        android:textAppearance="?android:textAppearanceMedium"
        android:textSize="40sp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/startText"
        android:layout_alignRight="@+id/outsideText" />

    <EditText
        android:layout_width="50dp"
        android:inputType="time"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:maxLength="2"
        android:background="@color/grey"
        android:id="@+id/endFieldHour"
        android:layout_below="@+id/startFieldHour"
        android:layout_alignLeft="@id/startFieldHour" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_marginTop="10dp"
        android:text="@string/colon"
        android:id="@+id/colon3"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_below="@+id/colon2"
        android:layout_alignLeft="@id/colon2"
        android:layout_marginBottom="10dp" />

    <EditText
        android:layout_width="50dp"
        android:inputType="time"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:maxLength="2"
        android:background="@color/grey"
        android:id="@+id/endFieldMinutes"
        android:layout_below="@+id/startFieldMinutes"
        android:layout_alignLeft="@+id/startFieldMinutes" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginBottom="30dp"
        android:id="@+id/weatherList"
        android:layout_marginTop="200dp"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/saveButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Weather"
        android:id="@+id/showWeather"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"/>

</RelativeLayout>